add some more aliases

--- a/templates/default/bash_profile-aliases.sh.erb
+++ b/templates/default/bash_profile-aliases.sh.erb
@@ -1,4 +1,11 @@
 alias ll='ls -lhA'
+alias la='ls -a'
 
 alias grep='grep --color=auto'
 alias egrep='egrep --color=auto'
+
+alias gst='git status'
+alias rebasemaster='git fetch && git rebase master'
+
+alias sb='source ~/.bash_profile'
+alias mba='mvim ~/.bash_profile_includes'
